INGRESS/todoui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoui
  template:
    metadata:
      labels:
        app: todoui
    spec:
      containers:
      - name: todoui
        image: devopsinsiders/todoapp-ui-new:v2
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
