INGRESS/netflix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix
spec:
  selector:
    app: netflix
  ports:
  - port: 80   #port of service
    targetPort: 80  #port of pod
