INGRESS/todoservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoui
spec:
  selector:
    app: todoui
  ports:
  - port: 80  #serviceport
    targetPort: 80 #pod or container port
