INGRESS/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rule
  labels:
    name: nginx-rule
spec:
  ingressClassName: nginx
  rules:
  - host: rahul.dhondhu.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80  #is port pr service sun raha hai
